# selflearn-trader-prop-copilot

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  config.example.toml  docker-compose.yml  pyproject.toml  requirements.txt  run_backtest.py  start.ps1  start.sh  stop.sh  streamlit_app.py  trades.csv
.github/: PR_BODY.md  PR_BODY_2.md  RELEASE_NOTES_0_3_0.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
app/: alerts.py  backtest.py  config.py  features.py  journal.py  news.py  paperbroker.py  utils.py
app/analysis/: metrics.py  prop_eval.py
app/dataio/: oanda.py  yf.py
app/models/: online_classifier.py
app/strategy/: contextual_bandit.py
app/ui/: st_app.py
app/utils/: state.py
models_ckpt/: EUR_USD_1h.joblib  XAU_USD_1h.joblib  clf.joblib  online_clf.joblib  scaler.joblib
presets/: 5k pass good run.json
scripts/: fix_eff_params_order.py  fix_eff_vars_early.py  fix_golive_and_ternary.py  fix_live_eff.py  fix_ms.sh  fix_ruff_all.sh  fix_st_app_imports_and_caption.py  fix_st_app_quotes_emojis.py  fix_trickle_var.py  fix_up038_backtest.py  fix_up038_generic.py  ms.sh  ms_triage.sh  patch_live_heartbeat.py  patch_test_conn_trickle.py  pr_merge_11.sh  repair_st_app_header_full.py  restore_st_app_header.py  triage.sh  triage_fix.sh  triage_issues.sh  wire_trickle_live.py
