[project]
name = "prop_copilot"
version = "0.3.0"
requires-python = ">=3.10"

[tool.black]
line-length = 120
target-version = ["py311","py312","py313"]

[tool.ruff]
# Formatting-level settings stay here
line-length = 120

[tool.ruff.lint]
# Linter settings move under 'lint'
select = ["E", "F", "W", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
# Keep UI strings unwrapped; allow the launcher import placement
"app/ui/st_app.py" = ["E501"]
"streamlit_app.py" = ["E402"]
